--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "rollup-plugin-dts": "^4.2.2"
   }
 }
